--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/ANJALIAPILLAI/blog-comp2068#readme",
   "dependencies": {
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.16.1",
     "mongoose": "^5.5.13",
     "nodemon": "^1.19.1",
     "pug": "^2.0.3"
